prevented horizontal scroll

--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@
 /* Part of <body> in index.html */
 body {
     font-family: "Poppins", sans-serif;
+    overflow-x: hidden;
 }
 
 .dark-mode {
